--- a/index.html
+++ b/index.html
@@ -155,23 +155,12 @@
 
         <div class="clients-slider">
           <div class="clients-track">
-            <div class="client-logo">4Z</div>
-            <div class="client-logo">JUST SUNNIES</div>
-            <div class="client-logo">Handles &More</div>
-            <div class="client-logo">JCV</div>
-            <div class="client-logo">PETFOOD</div>
-            <div class="client-logo">INOVA</div>
-            <div class="client-logo">BRITE</div>
-            <div class="client-logo">MegaCASH</div>
-            <!-- Duplicate for seamless loop -->
-            <div class="client-logo">4Z</div>
-            <div class="client-logo">JUST SUNNIES</div>
-            <div class="client-logo">Handles &More</div>
-            <div class="client-logo">JCV</div>
-            <div class="client-logo">PETFOOD</div>
-            <div class="client-logo">INOVA</div>
-            <div class="client-logo">BRITE</div>
-            <div class="client-logo">MegaCASH</div>
+            <div class="client-logo"><img src="/images/clientsimg/satlus.png"></div>
+            <div class="client-logo"><img src="/images/clientsimg/zentur.png"></div>
+            <div class="client-logo"><img src="/images/clientsimg/zoodle.png"></div>
+            <div class="client-logo"><img src="/images/clientsimg/renstore.avif"></div>
+            <div class="client-logo"><img src="/images/clientsimg/travel.png"></div>
+            <div class="client-logo"><img src="/images/clientsimg/gem.png"></div>
           </div>
         </div>
       </div>
@@ -185,13 +174,13 @@
         <div class="section-title">
           <!-- <div class="section-icon"></div> -->
           <div>
-            <div class="services-label">
+            <div class="services-label1">
               <i class="fa-regular fa-circle"></i> OUR SERVICES
             </div>
             <h2 class="main-title">Our Expertise Your Growth</h2>
           </div>
         </div>
-        <a href="#" class="view-all-btn">View All Services</a>
+        <a href="#" class="view-all-btn1">View All Services</a>
       </div>
 
       <div class="services-grid">
@@ -475,7 +464,7 @@
 
     <!-- our work -->
     <section class="process-section">
-      <div class="section-header">
+      <div class="section-header2">
         <p>OUR WORK PROCESS</p>
         <h1>Our Proven Process for<br />Delivering Success</h1>
         <a href="#" class="get-in-touch-btn">Get In Touch</a>
@@ -599,19 +588,20 @@
           >
             TESTIMONIALS
           </p>
-          <h2>Proven Success Through Our Clients’ Words</h2>
+          <h2>What happy clients say about us?</h2>
+          <!-- <h2>Proven Success Through Our Clients’ Words</h2> -->
         </div>
 
         <div class="testimonial-card">
           <div class="testimonial-avatar">
-            <img src="/images/seoright.jpg" alt="Sarah M" />
+            <img src="/images/kelly.jpg" alt="Sarah M" />
           </div>
           <div class="testimonial-content">
-            <div class="testimonial-name">Sarah M</div>
-            <div class="testimonial-role">E-Commerce Owner</div>
+            <div class="testimonial-name">Kelly Garbinsky</div>
+            <div class="testimonial-role">Mental Health Therapist
+</div>
             <div class="testimonial-text">
-              SEOX Transformed Our Online Presence. We Saw A 300% Increase In
-              Website Months!
+              After leaving my 9–5, a friend referred me to Shyam Sahu at Smart Vision Tech Labs. The team was responsive, professional, and affordable. My website looks amazing, and now we’re working on SEO. Highly recommend Shyam for web and SEO services - honest and committed!
             </div>
           </div>
           <div class="quote-icon">&#10077;</div>
@@ -619,14 +609,13 @@
 
         <div class="testimonial-card highlight">
           <div class="testimonial-avatar">
-            <img src="/images/ppc3.jpg" alt="John Doe" />
+            <img src="/images/selus.png" alt="John Doe" />
           </div>
           <div class="testimonial-content">
-            <div class="testimonial-name">John Doe</div>
-            <div class="testimonial-role">Marketing Manager</div>
+            <div class="testimonial-name">Erich Mayr</div>
+            <div class="testimonial-role">Salus Security</div>
             <div class="testimonial-text">
-              Team Is Proactive, Professional, Results-Driven. Highly Recommend
-              Their Services!
+              I had a great experience working with Shyam from Smart Vision TechLabs on the development of our website for Salus Security. They provided timely communication, fair negotiations, and delivered the project exactly as we needed. The job was well done, and I’m pleased with the results. We’ll definitely be using their services again for future work. Highly recommended!
             </div>
           </div>
           <div class="quote-icon">&#10077;</div>
@@ -634,14 +623,14 @@
 
         <div class="testimonial-card">
           <div class="testimonial-avatar">
-            <img src="/images/sample1.jpg" alt="Alex Hales" />
+            <img src="/images/bhavesh.jpg" alt="Alex Hales" />
           </div>
           <div class="testimonial-content">
-            <div class="testimonial-name">Alex Hales</div>
-            <div class="testimonial-role">E-Commerce Owner</div>
+            <div class="testimonial-name">Bhavesh Patel</div>
+            <div class="testimonial-role">Enfield Food & Gas - Managing Director
+</div>
             <div class="testimonial-text">
-              Thanks To SEOX, Our Revenue Doubled Last Year. They’re Truly The
-              Best In The Industry.
+              Fast and professional service They have done a great job setting up webpage at reasonable price
             </div>
           </div>
           <div class="quote-icon">&#10077;</div>
@@ -659,7 +648,7 @@
 
     <hr />
 
-    <!-- blog -->
+    <!-- Blog -->
     <section class="case-studies-section">
       <div class="case-studies-header">
         <h2>Webential in Action: Explore Our Customer Success Stories</h2>
@@ -723,11 +712,10 @@
           </div>
         </div>
       </div>
-
-      <a href="#" class="view-all-btn">View All Case Studies</a>
+      <br>
+      <a href="#" class="blog-btn">View All Case Studies</a>
     </section>
 
-    <!-- footer -->
     
 
 
