--- a/index.html
+++ b/index.html
@@ -161,6 +161,12 @@
             <div class="client-logo"><img src="/images/clientsimg/renstore.avif"></div>
             <div class="client-logo"><img src="/images/clientsimg/travel.png"></div>
             <div class="client-logo"><img src="/images/clientsimg/gem.png"></div>
+            <div class="client-logo"><img src="/images/clientsimg/satlus.png"></div>
+            <div class="client-logo"><img src="/images/clientsimg/zentur.png"></div>
+            <div class="client-logo"><img src="/images/clientsimg/zoodle.png"></div>
+            <div class="client-logo"><img src="/images/clientsimg/renstore.avif"></div>
+            <div class="client-logo"><img src="/images/clientsimg/travel.png"></div>
+            <div class="client-logo"><img src="/images/clientsimg/gem.png"></div>
           </div>
         </div>
       </div>
@@ -350,8 +356,7 @@
     <section class="portfolio-section-wrapper">
       <h2 class="portfolio-title-text">Portfolio</h2>
       <p class="portfolio-subtitle-text">
-        Necessitatibus eius consequatur ex aliquid fuga eum quidem sunt
-        consequatur velit
+        Engaging and Responsive Websites for a Better Online Presence
       </p>
 
       <div class="portfolio-tabs-nav">
@@ -365,16 +370,16 @@
           class="portfolio-tab-btn"
           onclick="filterPortfolio('webdesign')"
         >
-          Web Design
+          Web Design & Development
         </button>
         <button class="portfolio-tab-btn" onclick="filterPortfolio('graphics')">
-          Graphics
+          Custom Web Application
         </button>
         <button class="portfolio-tab-btn" onclick="filterPortfolio('motion')">
-          Motion
+          Ecommerce
         </button>
         <button class="portfolio-tab-btn" onclick="filterPortfolio('branding')">
-          Branding
+          Mobile Application
         </button>
       </div>
 
@@ -383,7 +388,7 @@
         <div class="portfolio-card-box" data-category="webdesign">
           <div class="portfolio-card-image">
             <img
-              src="https://images.pexels.com/photos/965990/pexels-photo-965990.jpeg"
+              src="/images/portfolio/1.png"
               alt=""
             />
           </div>
@@ -396,7 +401,7 @@
         <div class="portfolio-card-box" data-category="graphics">
           <div class="portfolio-card-image">
             <img
-              src="https://images.pexels.com/photos/3471421/pexels-photo-3471421.jpeg"
+              src="/images/portfolio/2.png"
               alt=""
             />
           </div>
@@ -409,7 +414,7 @@
         <div class="portfolio-card-box" data-category="motion">
           <div class="portfolio-card-image">
             <img
-              src="https://images.pexels.com/photos/66134/pexels-photo-66134.jpeg"
+              src="/images/portfolio/3.png"
               alt=""
             />
           </div>
@@ -422,7 +427,7 @@
         <div class="portfolio-card-box" data-category="branding">
           <div class="portfolio-card-image">
             <img
-              src="https://images.pexels.com/photos/207983/pexels-photo-207983.jpeg"
+              src="/images/portfolio/4.png"
               alt=""
             />
           </div>
@@ -435,7 +440,7 @@
         <div class="portfolio-card-box" data-category="webdesign">
           <div class="portfolio-card-image">
             <img
-              src="https://images.pexels.com/photos/3182783/pexels-photo-3182783.jpeg"
+              src="/images/portfolio/5.png"
               alt=""
             />
           </div>
@@ -448,7 +453,7 @@
         <div class="portfolio-card-box" data-category="motion">
           <div class="portfolio-card-image">
             <img
-              src="https://images.pexels.com/photos/1858175/pexels-photo-1858175.jpeg"
+              src="/images/portfolio/8.png"
               alt=""
             />
           </div>
