--- a/index.html
+++ b/index.html
@@ -40,17 +40,16 @@
             <div class="mega-dropdown">
               <div class="dropdown-content">
                 <div class="dropdown-section">
-                  <h3>Web Development</h3>
+                  <h3>Tech Solutions</h3>
                   <ul>
-                    <li><a href="#">WordPress Development</a></li>
-                    <li><a href="#">WooCommerce Development</a></li>
-                    <li><a href="#">Shopify Development</a></li>
-                    <li><a href="#">Webflow Development</a></li>
-                    <li><a href="#">Squarespace Development</a></li>
-                    <li><a href="#">BigCommerce Development</a></li>
+                    <li><a href="#">Website Development</a></li>
+                    <li><a href="#">Mobile Application Development</a></li>
+                    <li><a href="#">Ecommerce Platform Development</a></li>
+                    <li><a href="#">IT Server Support & Maintainence</a></li>
+                    <!-- <li><a href="#">IT Server Maintain</a></li>
                     <li><a href="#">WIX Development</a></li>
                     <li><a href="#">PHP Development</a></li>
-                    <li><a href="#">HTML/CSS Frontend Development</a></li>
+                    <li><a href="#">HTML/CSS Frontend Development</a></li> -->
                   </ul>
                 </div>
 
@@ -159,13 +158,13 @@
             <div class="client-logo"><img src="/images/clientsimg/zentur.png"></div>
             <div class="client-logo"><img src="/images/clientsimg/zoodle.png"></div>
             <div class="client-logo"><img src="/images/clientsimg/renstore.avif"></div>
-            <div class="client-logo"><img src="/images/clientsimg/travel.png"></div>
+            <!-- <div class="client-logo"><img src="/images/clientsimg/travel.png"></div> -->
             <div class="client-logo"><img src="/images/clientsimg/gem.png"></div>
             <div class="client-logo"><img src="/images/clientsimg/satlus.png"></div>
             <div class="client-logo"><img src="/images/clientsimg/zentur.png"></div>
             <div class="client-logo"><img src="/images/clientsimg/zoodle.png"></div>
             <div class="client-logo"><img src="/images/clientsimg/renstore.avif"></div>
-            <div class="client-logo"><img src="/images/clientsimg/travel.png"></div>
+            <!-- <div class="client-logo"><img src="/images/clientsimg/travel.png"></div> -->
             <div class="client-logo"><img src="/images/clientsimg/gem.png"></div>
           </div>
         </div>
@@ -191,13 +190,56 @@
 
       <div class="services-grid">
         <div class="service-card">
+          <div class="service-icon web-icon">
+            <i class="fa-solid fa-object-group"></i>
+          </div>
+          <h3 class="service-title">Web Design</h3>
+          <p class="service-description">
+            At Smart Vision Techlabs we craft intuitive designs paired with a compelling user experience to set your UI/UX apart in the digital world. Our seamless.
+          </p>
+          <a href="#" class="read-more">Read More</a>
+        </div>
+
+        <div class="service-card">
+          <div class="service-icon web-icon">
+            <i class="fa-solid fa-globe"></i>
+          </div>
+          <h3 class="service-title">Web Development</h3>
+          <p class="service-description">
+            Smart Vision Techlabs is a premier web development company offering a wide range of custom-built websites, web portals, and web applications. Utilizing the latest.
+          </p>
+          <a href="#" class="read-more">Read More</a>
+        </div>
+
+        <div class="service-card">
+          <div class="service-icon web-icon">
+            <i class="fa-solid fa-mobile-screen-button"></i>
+          </div>
+          <h3 class="service-title">Mobile App Development</h3>
+          <p class="service-description">
+            As a leading mobile app development company in India, our team of expert iOS and Android developers excels at transforming your vision into.
+          </p>
+          <a href="#" class="read-more">Read More</a>
+        </div>
+
+        <div class="service-card">
           <div class="service-icon seo-icon">
             <i class="fa-solid fa-magnifying-glass"></i>
           </div>
           <h3 class="service-title">Search Engine Optimization (SEO)</h3>
           <p class="service-description">
-            Drive Organic Traffic And Improve Your Online Visibility With Our
-            Advanced SEO Techniques.
+            Our expertly crafted SEO strategy is designed to meet your unique business needs. By implementing targeted keyword research and optimization, we ensure your website rises to the top of.
+          </p>
+          <a href="#" class="read-more">Read More</a>
+        </div>
+
+        <div class="service-card">
+          <div class="service-icon smm-icon">
+            <i class="fa-solid fa-person"></i>
+          </div>
+          <h3 class="service-title">Social Media Optimization (SMO)</h3>
+          <p class="service-description">
+            At Smart Vision TechLabs, we combine creativity with data-driven strategies to deliver SMO services that elevate your brand’s online presence.
           </p>
           <a href="#" class="read-more">Read More</a>
         </div>
@@ -214,6 +256,17 @@
           <a href="#" class="read-more">Read More</a>
         </div>
 
+        <div class="service-card">
+          <div class="service-icon seo-icon">
+            <i class="fa-solid fa-basket-shopping"></i>
+          </div>
+          <h3 class="service-title">Ecommerce Platform Development</h3>
+          <p class="service-description">
+            At SmartVision TechLabs, we build stunning, reliable apps that scale with your business and work smoothly across all devices.
+          </p>
+          <a href="#" class="read-more">Read More</a>
+        </div>
+
         <div class="service-card featured">
           <div class="service-icon content-icon">
             <i class="fa-solid fa-circle-check"></i>
@@ -226,31 +279,7 @@
           <a href="#" class="read-more">Read More</a>
         </div>
 
-        <div class="service-card">
-          <div class="service-icon smm-icon">
-            <i class="fa-solid fa-person"></i>
-          </div>
-          <h3 class="service-title">Social Media Marketing (SMM)</h3>
-          <p class="service-description">
-            Engage And Connect With Your Audience On Social Media Platforms With
-            Our Result-Driven SMM Strategies. Engage Grow Audience Across
-            Platforms Tailored Content Strategies.
-          </p>
-          <a href="#" class="read-more">Read More</a>
-        </div>
 
-        <div class="service-card">
-          <div class="service-icon web-icon">
-            <i class="fa-solid fa-globe"></i>
-          </div>
-          <h3 class="service-title">Web Design & Development</h3>
-          <p class="service-description">
-            Make A Lasting Impression With A Professionally Designed And
-            User-Friendly Website. Our Web Design And Development Nurture
-            Relationships With Your Audience Through Personalized
-          </p>
-          <a href="#" class="read-more">Read More</a>
-        </div>
       </div>
     </section>
 
@@ -372,9 +401,9 @@
         >
           Web Design & Development
         </button>
-        <button class="portfolio-tab-btn" onclick="filterPortfolio('graphics')">
+        <!-- <button class="portfolio-tab-btn" onclick="filterPortfolio('graphics')">
           Custom Web Application
-        </button>
+        </button> -->
         <button class="portfolio-tab-btn" onclick="filterPortfolio('motion')">
           Ecommerce
         </button>
@@ -423,7 +452,31 @@
             <div class="portfolio-title-label">Product Animation Reel</div>
           </div>
         </div>
+        <div class="portfolio-card-box" data-category="branding">
+          <div class="portfolio-card-image">
+            <img
+              src="/images/portfolio/4.png"
+              alt=""
+            />
+          </div>
+          <div class="portfolio-card-text-info">
+            <div class="portfolio-category-label">Branding</div>
+            <div class="portfolio-title-label">Luxury Brand Package</div>
+          </div>
+        </div>
         <!-- Branding -->
+        <div class="portfolio-card-box" data-category="branding">
+          <div class="portfolio-card-image">
+            <img
+              src="/images/portfolio/4.png"
+              alt=""
+            />
+          </div>
+          <div class="portfolio-card-text-info">
+            <div class="portfolio-category-label">Branding</div>
+            <div class="portfolio-title-label">Luxury Brand Package</div>
+          </div>
+        </div>
         <div class="portfolio-card-box" data-category="branding">
           <div class="portfolio-card-image">
             <img
