--- a/index.html
+++ b/index.html
@@ -147,10 +147,7 @@
     <!-- Clients Section -->
     <section class="clients-section">
       <div class="clients-container">
-        <p class="clients-text">
-          Join 300+ Business and Creative Agencies Worldwide That Trust
-          Webential to Deliver Results
-        </p>
+        
 
         <div class="clients-slider">
           <div class="clients-track">
@@ -267,9 +264,9 @@
           <a href="#" class="read-more">Read More</a>
         </div>
 
-        <div class="service-card featured">
-          <div class="service-icon content-icon">
-            <i class="fa-solid fa-circle-check"></i>
+        <div class="service-card">
+          <div class="service-icon web-icon">
+            <i class="fa-solid fa-globe"></i>
           </div>
           <h3 class="service-title">Content Marketing</h3>
           <p class="service-description">
@@ -698,7 +695,7 @@
       </div>
 
       <div class="testimonial-right">
-        <a href="#" class="view-button">View All Review</a>
+        <a href="testimonial.html" class="view-button">View All Review</a>
 
         <img src="/images/seoright.jpg" alt="Happy Client" />
       </div>
@@ -773,8 +770,6 @@
       <br>
       <a href="#" class="blog-btn">View All Case Studies</a>
     </section>
-
-    
 
 
     <script src="script.js"></script>
