--- a/index.html
+++ b/index.html
@@ -521,25 +521,24 @@
     <section class="process-section">
       <div class="section-header2">
         <p>OUR WORK PROCESS</p>
-        <h1>Our Proven Process for<br />Delivering Success</h1>
+        <h1>Our Proven Process for Delivering Success</h1>
         <a href="#" class="get-in-touch-btn">Get In Touch</a>
       </div>
       <div class="slider-container">
         <button class="arrow arrow-left" onclick="prevSlide()">❮</button>
         <div class="slide-card" id="slide">
           <div class="slide-image">
-            <img src="/images/mobile-dev.jpg" alt="slide" />
+            <img src="/images/research.jpg" alt="slide" />
           </div>
           <div class="slide-content">
-            <h2>Monitoring & Optimization</h2>
+            <h2>Research</h2>
             <p>
-              Continuous Monitoring And Regular Optimizations To Keep Your
-              Campaigns Effective And Aligned With Your Goals.
+              At the beginning of our collaboration, we take the time to thoroughly understand your business
             </p>
             <ul>
-              <li>In-Depth Research</li>
-              <li>Implementation with Precision</li>
-              <li>Transparent Reporting</li>
+              <li>Identify and document your business goals and target audience</li>
+              <li>Analyze market trends and competitor strategies</li>
+              <li>Gather detailed requirements and key success metrics</li>
             </ul>
           </div>
         </div>
